--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cowroll-web",
+  "name": "cowroll",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -7,11 +7,49 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "test": "vitest"
   },
   "dependencies": {
-    "astro": "^4.6.3",
     "@astrojs/check": "^0.5.10",
-    "typescript": "^5.4.5"
+    "@astrojs/react": "^3.3.0",
+    "@monaco-editor/react": "^4.6.0",
+    "@reduxjs/toolkit": "^2.2.3",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@vitejs/plugin-react": "^4.2.1",
+    "astro": "^4.6.3",
+    "codemirror": "^5.65.16",
+    "re-resizable": "^6.9.14",
+    "react": "^18.2.0",
+    "react-codemirror2": "^8.0.0",
+    "react-dom": "^18.2.0",
+    "react-monaco-editor": "^0.55.0",
+    "react-redux": "^9.1.1",
+    "vscode": "npm:@codingame/monaco-vscode-api@~4.3.2"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3.0.2",
+    "@eslint/js": "^9.1.1",
+    "@testing-library/react": "^15.0.4",
+    "@testing-library/user-event": "^14.5.2",
+    "eslint": "^8.57.0",
+    "eslint-config-love": "^47.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.34.1",
+    "globals": "^15.0.0",
+    "happy-dom": "^14.7.1",
+    "jsdom": "^24.0.0",
+    "msw": "^2.2.14",
+    "prettier": "^3.2.5",
+    "prettier-plugin-astro": "^0.13.0",
+    "typescript": "^5.4.5",
+    "vite-plugin-monaco-editor": "^1.1.0",
+    "vitest": "^1.5.0"
   }
 }
