--- a/package.json
+++ b/package.json
@@ -12,29 +12,32 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
-    "@astrojs/react": "^3.3.0",
+    "@astrojs/react": "^3.3.1",
     "@monaco-editor/react": "^4.6.0",
     "@reduxjs/toolkit": "^2.2.3",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
     "@vitejs/plugin-react": "^4.2.1",
-    "astro": "^4.6.3",
+    "astro": "^4.7.0",
     "codemirror": "^5.65.16",
-    "re-resizable": "^6.9.14",
+    "next-i18next": "^15.3.0",
+    "re-resizable": "^6.9.16",
     "react": "^18.2.0",
     "react-codemirror2": "^8.0.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.1",
     "react-monaco-editor": "^0.55.0",
     "react-redux": "^9.1.1",
-    "vscode": "npm:@codingame/monaco-vscode-api@~4.3.2"
+    "vscode": "npm:@codingame/monaco-vscode-api@~4.4.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.2",
     "@eslint/js": "^9.1.1",
     "@testing-library/react": "^15.0.4",
     "@testing-library/user-event": "^14.5.2",
-    "eslint": "^8.57.0",
+    "eslint": "^8.56.0",
     "eslint-config-love": "^47.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
@@ -50,6 +53,6 @@
     "prettier-plugin-astro": "^0.13.0",
     "typescript": "^5.4.5",
     "vite-plugin-monaco-editor": "^1.1.0",
-    "vitest": "^1.5.0"
+    "vitest": "^1.5.2"
   }
 }
