--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "astro": "^4.7.0",
     "codemirror": "^5.65.16",
+    "monaco-editor": "^0.44.0",
     "next-i18next": "^15.3.0",
     "re-resizable": "^6.9.16",
     "react": "^18.2.0",
