--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@astrojs/check": "^0.5.10",
     "@astrojs/react": "^3.3.1",
     "@monaco-editor/react": "^4.6.0",
+    "@mui/icons-material": "^5.15.16",
+    "@mui/material": "^5.15.16",
+    "@mui/x-tree-view": "^7.3.1",
     "@reduxjs/toolkit": "^2.2.3",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
