--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
+    "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@vitejs/plugin-react": "^4.2.1",
     "astro": "^4.7.0",
@@ -32,9 +33,20 @@
     "react-codemirror2": "^8.0.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.1",
+    "react-icons": "^5.2.1",
     "react-monaco-editor": "^0.55.0",
     "react-redux": "^9.1.1",
     "react-toastify": "^10.0.5",
+    "rete": "2.0.3",
+    "rete-area-plugin": "2.0.3",
+    "rete-auto-arrange-plugin": "2.0.0",
+    "rete-connection-plugin": "2.0.2",
+    "rete-context-menu-plugin": "2.0.0",
+    "rete-dock-plugin": "2.0.0",
+    "rete-engine": "2.0.0",
+    "rete-react-plugin": "2.0.5",
+    "rete-render-utils": "2.0.2",
+    "styled-components": "^6.1.11",
     "uuid": "^9.0.1",
     "vscode": "npm:@codingame/monaco-vscode-api@~4.4.1"
   },
