--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@vitejs/plugin-react": "^4.2.1",
     "astro": "^4.7.0",
+    "blockly": "^11.1.1",
     "codemirror": "^5.65.16",
     "monaco-editor": "^0.44.0",
     "next-i18next": "^15.3.0",
