--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@astrojs/check": "^0.5.10",
     "@astrojs/react": "^3.3.1",
+    "@blockly/block-shareable-procedures": "^5.0.2",
     "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
