--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@astrojs/check": "^0.5.10",
     "@astrojs/react": "^3.3.1",
     "@blockly/block-shareable-procedures": "^5.0.2",
+    "@blockly/plugin-cross-tab-copy-paste": "^6.0.2",
+    "@blockly/workspace-backpack": "^6.0.2",
     "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
