--- a/package.json
+++ b/package.json
@@ -12,71 +12,77 @@
     "lint": "prettier --write  \"**/*.{js,jsx,ts,tsx,md,mdx,astro}\" && eslint --fix \"src/**/*.{js,ts,jsx,tsx,astro}\""
   },
   "dependencies": {
-    "@astrojs/check": "^0.5.10",
-    "@astrojs/react": "^3.3.1",
+    "@astrojs/check": "^0.7.0",
+    "@astrojs/react": "^3.6.0",
     "@blockly/block-shareable-procedures": "^5.0.2",
     "@blockly/plugin-cross-tab-copy-paste": "^6.0.2",
     "@blockly/workspace-backpack": "^6.0.2",
+    "@codingame/monaco-vscode-api": "^6.0.3",
+    "@eslint/config-array": "^0.17.0",
+    "@eslint/object-schema": "^2.1.4",
     "@monaco-editor/react": "^4.6.0",
-    "@mui/icons-material": "^5.15.16",
-    "@mui/material": "^5.15.16",
-    "@mui/x-tree-view": "^7.3.1",
-    "@reduxjs/toolkit": "^2.2.3",
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
+    "@mui/icons-material": "^5.15.21",
+    "@mui/material": "^5.15.21",
+    "@mui/x-tree-view": "^7.8.0",
+    "@reduxjs/toolkit": "^2.2.6",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-resizable": "^3.0.8",
     "@types/styled-components": "^5.1.34",
-    "@typescript-eslint/eslint-plugin": "^7.7.1",
-    "@vitejs/plugin-react": "^4.2.1",
-    "astro": "^4.7.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "astro": "^4.11.4",
     "blockly": "^11.1.1",
-    "codemirror": "^5.65.16",
+    "glob": "^10.4.2",
     "monaco-editor": "^0.44.0",
+    "moveable-helper": "^0.4.0",
     "next-i18next": "^15.3.0",
-    "re-resizable": "^6.9.16",
-    "react": "^18.2.0",
+    "re-resizable": "^6.9.17",
+    "react": "^18.3.1",
     "react-codemirror2": "^8.0.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^14.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dom": "^18.3.1",
+    "react-i18next": "^14.1.2",
     "react-icons": "^5.2.1",
     "react-monaco-editor": "^0.55.0",
-    "react-redux": "^9.1.1",
+    "react-moveable": "^0.56.0",
+    "react-redux": "^9.1.2",
+    "react-resizable-box": "^2.1.0",
     "react-toastify": "^10.0.5",
     "rete": "2.0.3",
-    "rete-area-plugin": "2.0.3",
-    "rete-auto-arrange-plugin": "2.0.0",
     "rete-connection-plugin": "2.0.2",
-    "rete-context-menu-plugin": "2.0.0",
-    "rete-dock-plugin": "2.0.0",
-    "rete-engine": "2.0.0",
     "rete-react-plugin": "2.0.5",
     "rete-render-utils": "2.0.2",
     "styled-components": "^6.1.11",
-    "uuid": "^9.0.1",
+    "uuid": "^10.0.0",
     "vscode": "npm:@codingame/monaco-vscode-api@~4.4.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.0.2",
-    "@eslint/js": "^9.1.1",
-    "@testing-library/react": "^15.0.4",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.6.0",
+    "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
-    "@typescript-eslint/parser": "^7.7.1",
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@typescript-eslint/parser": "^7.15.0",
+    "@typescript-eslint/type-utils": "^7.15.0",
+    "@typescript-eslint/utils": "^7.15.0",
     "eslint": "^8.57.0",
-    "eslint-config-love": "^47.0.0",
+    "eslint-config-love": "^53.0.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-astro": "^1.2.0",
+    "eslint-plugin-astro": "^1.2.2",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-n": "^17.9.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.34.1",
-    "globals": "^15.0.0",
-    "happy-dom": "^14.7.1",
-    "jsdom": "^24.0.0",
-    "msw": "^2.2.14",
-    "prettier": "^3.2.5",
-    "prettier-plugin-astro": "^0.13.0",
-    "typescript": "^5.4.5",
+    "eslint-plugin-promise": "^6.4.0",
+    "eslint-plugin-react": "^7.34.3",
+    "globals": "^15.8.0",
+    "happy-dom": "^14.12.3",
+    "jsdom": "^24.1.0",
+    "msw": "^2.3.1",
+    "prettier": "^3.3.2",
+    "prettier-plugin-astro": "^0.14.0",
+    "typescript": "^5.5.3",
     "vite-plugin-monaco-editor": "^1.1.0",
-    "vitest": "^1.5.2"
+    "vitest": "^1.6.0"
   }
 }
