added addRol with image

--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "react-moveable": "^0.56.0",
     "react-redux": "^9.1.2",
     "react-resizable-box": "^2.1.0",
+    "react-router-dom": "^6.24.1",
     "react-toastify": "^10.0.5",
+    "redux-persist": "^6.0.0",
     "rete": "2.0.3",
     "rete-connection-plugin": "2.0.2",
     "rete-react-plugin": "2.0.5",
