--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@codingame/monaco-vscode-api": "^6.0.3",
     "@eslint/config-array": "^0.17.0",
     "@eslint/object-schema": "^2.1.4",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
