--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-i18next": "^14.1.2",
     "react-icons": "^5.2.1",
     "react-monaco-editor": "^0.55.0",
