--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@mui/material": "^5.15.21",
     "@mui/x-tree-view": "^7.8.0",
     "@reduxjs/toolkit": "^2.2.6",
+    "@types/markdown-it": "^14.1.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-resizable": "^3.0.8",
@@ -36,6 +37,7 @@
     "astro": "^4.11.4",
     "blockly": "^11.1.1",
     "glob": "^10.4.2",
+    "markdown-it": "^14.1.0",
     "monaco-editor": "^0.44.0",
     "moveable-helper": "^0.4.0",
     "next-i18next": "^15.3.0",
@@ -46,6 +48,7 @@
     "react-draggable": "^4.4.6",
     "react-i18next": "^14.1.2",
     "react-icons": "^5.2.1",
+    "react-markdown": "^9.0.1",
     "react-monaco-editor": "^0.55.0",
     "react-moveable": "^0.56.0",
     "react-redux": "^9.1.2",
