--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
     "@mui/x-tree-view": "^7.8.0",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@reduxjs/toolkit": "^2.2.6",
     "@types/markdown-it": "^14.1.2",
     "@types/react": "^18.3.3",
@@ -41,6 +43,8 @@
     "monaco-editor": "^0.44.0",
     "moveable-helper": "^0.4.0",
     "next-i18next": "^15.3.0",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "2.16.105",
     "re-resizable": "^6.9.17",
     "react": "^18.3.1",
     "react-codemirror2": "^8.0.0",
@@ -51,6 +55,7 @@
     "react-markdown": "^9.0.1",
     "react-monaco-editor": "^0.55.0",
     "react-moveable": "^0.56.0",
+    "react-pdf": "^9.1.0",
     "react-redux": "^9.1.2",
     "react-resizable-box": "^2.1.0",
     "react-router-dom": "^6.24.1",
