--- a/package.json
+++ b/package.json
@@ -12,91 +12,48 @@
     "lint": "prettier --write  \"**/*.{js,jsx,ts,tsx,md,mdx,astro}\" && eslint --fix \"src/**/*.{js,ts,jsx,tsx,astro}\""
   },
   "dependencies": {
-    "@astrojs/check": "^0.7.0",
+    "@astrojs/node": "^8.3.3",
     "@astrojs/react": "^3.6.0",
-    "@blockly/block-shareable-procedures": "^5.0.2",
     "@blockly/plugin-cross-tab-copy-paste": "^6.0.2",
     "@blockly/workspace-backpack": "^6.0.2",
-    "@codingame/monaco-vscode-api": "^6.0.3",
-    "@eslint/config-array": "^0.17.0",
-    "@eslint/object-schema": "^2.1.4",
-    "@fortawesome/fontawesome-svg-core": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
-    "@fortawesome/react-fontawesome": "^0.2.2",
     "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
     "@mui/x-tree-view": "^7.8.0",
-    "@react-pdf-viewer/core": "^3.12.0",
-    "@react-pdf-viewer/default-layout": "^3.12.0",
-    "@react-pdf/renderer": "^3.4.4",
     "@reduxjs/toolkit": "^2.2.6",
-    "@types/markdown-it": "^14.1.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@types/react-resizable": "^3.0.8",
-    "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.3.1",
     "astro": "^4.11.4",
+    "astro-eslint-parser": "^1.0.2",
     "blockly": "^11.1.1",
-    "df-lib": "^0.1.6",
-    "glob": "^10.4.2",
-    "markdown-it": "^14.1.0",
     "monaco-editor": "^0.44.0",
-    "moveable-helper": "^0.4.0",
-    "next-i18next": "^15.3.0",
-    "pdf-lib": "^1.17.1",
     "pdfjs-dist": "3.0.279",
-    "re-resizable": "^6.9.17",
     "react": "^18.3.1",
-    "react-codemirror2": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
-    "react-i18next": "^14.1.2",
-    "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
-    "react-monaco-editor": "^0.55.0",
-    "react-moveable": "^0.56.0",
-    "react-pdf": "5.7.2",
-    "react-pdf-editor": "^1.1.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
-    "rete": "2.0.3",
-    "rete-connection-plugin": "2.0.2",
-    "rete-react-plugin": "2.0.5",
-    "rete-render-utils": "2.0.2",
-    "styled-components": "^6.1.11",
     "uuid": "^10.0.0",
-    "vscode": "npm:@codingame/monaco-vscode-api@~4.4.1"
+    "vite": "^5.4.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.6.0",
     "@testing-library/react": "^16.0.0",
-    "@testing-library/user-event": "^14.5.2",
-    "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
-    "@typescript-eslint/type-utils": "^7.15.0",
-    "@typescript-eslint/utils": "^7.15.0",
     "eslint": "^8.57.0",
-    "eslint-config-love": "^53.0.0",
-    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-astro": "^1.2.2",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^17.9.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-promise": "^6.4.0",
     "eslint-plugin-react": "^7.34.3",
     "globals": "^15.8.0",
     "happy-dom": "^14.12.3",
     "jsdom": "^24.1.0",
     "msw": "^2.3.1",
     "prettier": "^3.3.2",
-    "prettier-plugin-astro": "^0.14.0",
     "typescript": "^5.5.3",
-    "vite-plugin-monaco-editor": "^1.1.0",
     "vitest": "^1.6.0"
   }
 }
