--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
     "lint": "prettier --write  \"**/*.{js,jsx,ts,tsx,md,mdx,astro}\" && eslint --fix \"src/**/*.{js,ts,jsx,tsx,astro}\""
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.2",
     "@astrojs/node": "^8.3.3",
-    "@astrojs/react": "^3.6.0",
-    "@blockly/plugin-cross-tab-copy-paste": "^6.0.2",
-    "@blockly/workspace-backpack": "^6.0.2",
+    "@astrojs/react": "^3.6.2",
+    "@blockly/plugin-cross-tab-copy-paste": "^6.0.7",
+    "@blockly/workspace-backpack": "^6.0.7",
     "@monaco-editor/react": "^4.6.0",
-    "@mui/icons-material": "^5.15.21",
-    "@mui/material": "^5.15.21",
-    "@mui/x-tree-view": "^7.8.0",
-    "@reduxjs/toolkit": "^2.2.6",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
+    "@mui/x-tree-view": "^7.13.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "astro": "^4.11.4",
+    "astro": "^4.14.2",
     "astro-eslint-parser": "^1.0.2",
     "blockly": "^11.1.1",
     "monaco-editor": "^0.44.0",
@@ -34,7 +35,7 @@
     "react-draggable": "^4.4.6",
     "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.24.1",
+    "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
     "uuid": "^10.0.0",
@@ -42,18 +43,18 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.6.0",
+    "@eslint/js": "^9.9.0",
     "@testing-library/react": "^16.0.0",
-    "@typescript-eslint/parser": "^7.15.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "eslint": "^8.57.0",
-    "eslint-plugin-astro": "^1.2.2",
-    "eslint-plugin-react": "^7.34.3",
-    "globals": "^15.8.0",
+    "eslint-plugin-astro": "^1.2.3",
+    "eslint-plugin-react": "^7.35.0",
+    "globals": "^15.9.0",
     "happy-dom": "^14.12.3",
-    "jsdom": "^24.1.0",
-    "msw": "^2.3.1",
-    "prettier": "^3.3.2",
-    "typescript": "^5.5.3",
+    "jsdom": "^24.1.1",
+    "msw": "^2.3.5",
+    "prettier": "^3.3.3",
+    "typescript": "^5.5.4",
     "vitest": "^1.6.0"
   }
 }
